karnc/tests/fixtures/positive/154_full_jobs/src/ops.karn
context ops

type Notification = {
  to: String,
}

service sweeper {
  on cron "*/5 * * * *" () -> Effect[Result[(), String]] {
    Ok(())
  }
}

service notifier {
  on queue "notifications" (message: Notification) -> Effect[Result[(), String]] {
    Ok(())
  }
}
